--- a/index.html
+++ b/index.html
@@ -4,9 +4,118 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AFW</title>
+
+    <!-- Runtime Guard: sanitize invalid CSS selectors like '*,:x' to prevent blank-screen crashes -->
+    <script>
+    (function () {
+      function sanitize(input) {
+        if (typeof input !== "string") return input;
+        // Remove the non-standard ':x' pseudo and tidy duplicate commas after removal
+        let out = input.replace(/:x\b/g, "");
+        // Fix sequences like "*,," that may appear after stripping
+        out = out.replace(/,\s*,/g, ",").replace(/^,\s*/, "").replace(/,\s*$/,"");
+        // Collapse empty selector to '*' if we ended up blank
+        if (out.trim() === "") out = "*";
+        return out;
+      }
+
+      // Patch selector-based DOM APIs early
+      try {
+        const docQS = Document.prototype.querySelector;
+        const docQSA = Document.prototype.querySelectorAll;
+        const elQS = Element.prototype.querySelector;
+        const elQSA = Element.prototype.querySelectorAll;
+        const elMatches = Element.prototype.matches;
+
+        Document.prototype.querySelector = function(sel) {
+          try { return docQS.call(this, sel); }
+          catch (e) {
+            if (String(sel).includes(":x")) return docQS.call(this, sanitize(String(sel)));
+            throw e;
+          }
+        };
+        Document.prototype.querySelectorAll = function(sel) {
+          try { return docQSA.call(this, sel); }
+          catch (e) {
+            if (String(sel).includes(":x")) return docQSA.call(this, sanitize(String(sel)));
+            throw e;
+          }
+        };
+        Element.prototype.querySelector = function(sel) {
+          try { return elQS.call(this, sel); }
+          catch (e) {
+            if (String(sel).includes(":x")) return elQS.call(this, sanitize(String(sel)));
+            throw e;
+          }
+        };
+        Element.prototype.querySelectorAll = function(sel) {
+          try { return elQSA.call(this, sel); }
+          catch (e) {
+            if (String(sel).includes(":x")) return elQSA.call(this, sanitize(String(sel)));
+            throw e;
+          }
+        };
+        Element.prototype.matches = function(sel) {
+          try { return elMatches.call(this, sel); }
+          catch (e) {
+            if (String(sel).includes(":x")) return elMatches.call(this, sanitize(String(sel)));
+            throw e;
+          }
+        };
+      } catch (_) {}
+
+      // Patch CSSOM inserts (where the invalid selector most often blows up)
+      if (window.CSSStyleSheet) {
+        try {
+          const ins = CSSStyleSheet.prototype.insertRule;
+          CSSStyleSheet.prototype.insertRule = function(rule, index) {
+            try { return ins.call(this, rule, index); }
+            catch (e) {
+              if (String(rule).includes(":x")) {
+                return ins.call(this, sanitize(String(rule)), index);
+              }
+              throw e;
+            }
+          };
+        } catch (_) {}
+
+        try {
+          if (CSSStyleSheet.prototype.replaceSync) {
+            const repSync = CSSStyleSheet.prototype.replaceSync;
+            CSSStyleSheet.prototype.replaceSync = function(cssText) {
+              try { return repSync.call(this, cssText); }
+              catch (e) {
+                if (String(cssText).includes(":x")) {
+                  return repSync.call(this, sanitize(String(cssText)));
+                }
+                throw e;
+              }
+            };
+          }
+        } catch (_) {}
+
+        try {
+          if (CSSStyleSheet.prototype.replace) {
+            const rep = CSSStyleSheet.prototype.replace;
+            CSSStyleSheet.prototype.replace = function(cssText) {
+              try { return rep.call(this, cssText); }
+              catch (e) {
+                if (String(cssText).includes(":x")) {
+                  return rep.call(this, sanitize(String(cssText)));
+                }
+                throw e;
+              }
+            };
+          }
+        } catch (_) {}
+      }
+    })();
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
+    <!-- Keep your original Vite entry. If your project uses a different entry path, Vite will adjust during build. -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
