fix(build): inline import → /src/main.tsx in index.html

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     <div id="app"></div>
     <!-- Load the app after the guard -->
     <script type="module">
-      import '/src/main.ts';
+      import '/src/main.tsx';
     </script>
     <noscript>Please enable JavaScript to use AFW.</noscript>
   </body>
 </html>
+
 
 
