fix: stable root mount and globals import

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AFW Admin</title>
+    <title>AFW</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Keep this AFTER the root div so React mounts correctly -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-
-
