chore: add runtime error boundary + debug overlay + sourcemaps

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AFW</title>
+    <!-- Lightweight debug overlay (enable via ?afwdebug=1) -->
+    <script src="/debug-overlay.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Keep this AFTER the root div so React mounts correctly -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
