--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0a1418" />
+    <meta property="og:title" content="Authentic From Within" />
+    <meta property="og:image" content="/og-image.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <title>AFW</title>
-    <!-- Lightweight debug overlay (enable via ?afwdebug=1) -->
-    <script src="/debug-overlay.js"></script>
   </head>
   <body>
     <div id="root"></div>
