--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self'; font-src 'self' data:; media-src 'self' data:;">
-    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0b0f12" />
     <title>Authentic From Within</title>
+    <script>
+      (function(){
+        try{
+          var t = localStorage.getItem("afw:theme") || "forest";
+          document.documentElement.setAttribute("data-theme", t);
+        }catch{}
+      })();
+    </script>
   </head>
   <body>
+    <script>
+      (function(){
+        try{
+          var t = document.documentElement.getAttribute("data-theme") || "forest";
+          document.body.setAttribute("data-theme", t);
+        }catch{}
+      })();
+    </script>
     <div id="root"></div>
+    <script type="module"> if (!location.hash) location.hash = "#/home"; </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
